# CLI-To-Do-list

./: README.md
NoteCLI/: Todo.py  config.py  config_commands.py  pyproject.toml  tools.py
